2009-12-04  John W. Eaton  <jwe@octave.org>

	* interpreter/images.awk: Emit rules to copy PNG files to
	octave.html directory once it is created.
	* interpreter/Makefile.am (all-local): Depend on $(HTMLDIR_IMAGES).
	(IMAGES): Include $(HTMLDIR_IMAGES) in the list.

2009-12-04  John W. Eaton  <jwe@octave.org>

	* interpreter/octave.texi: Include version.texi instead of conf.texi.
	* interpreter/Makefile.am (../conf.texi): Delete rule.
	(octave_TEXINFOS): Delete ../conf.texi from the list.
	($(srcdir)/octave.info octave.dvi octave.pdf octave.html):
	Remove duplicate $(octave_TEXINFOS) dependency.
	Depend on $(srcdir)/version.texi.

	* liboctave/liboctave.texi: Include version.texi instead of conf.texi.
	* liboctave/Makefile.am (../conf.texi): Delete rule.
	(dist_liboctave_TEXINFOS): Delete ../conf.texi from the list.
	(.NOTPARALLEL): Correct spelling of target.
	($(srcdir)/liboctave.info liboctave.dvi liboctave.html liboctave.pdf):
	Depend on $(srcdir)/version.texi

	* conf.texi.in: Delete.
	* Makefile.am: Delete rules for conf.texi.
	(.NOTPARALLEL): New target.

2009-12-03  John W. Eaton  <jwe@octave.org>

	* doc/Makefile.am (MUNGED_TEXI_SRC): Define as explicit list.
	(TXI_SRC): Define using substitution rule.

	* doc/Makefile.am (conf.texi): Only substitute OCTAVE_VERSION.
	* conf.texi: Likewise.

	* doc/interpreter/find-docstring-files.sh: New file.
	* doc/interpreter/Makefile.am (DOCSTRING_FILES): Use it.
	($(TOPDIR)/src/DOCSTRINGS, $(TOPDIR)/scripts/DOCSTRINGS):
	Delete rules.
	(.txi.texi): Pass $(top_srcdir) to munge-texi.
	(octave.info octave.dvi octave.pdf octave.html):
	Depend on $(octave_TEXINFOS), not $(nodist_octave_TEXINFOS).
	(nodist_octave_TEXINFOS): Delete variable.
	(octave_TEXINFOS): Include ../conf.texi in the list.
	(dist-hook): Delete target.
	(EXTRA_DIST): Add find-docstring-files.sh to the list.

	* doc/interpreter/basics.texi: Eliminate @value{OCTAVEHOME}
	* doc/interpreter/dynamic.txi: Delete examplefile and